<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.pbehera.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/button_gap"
        android:text="@string/app_top_label"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn0_label"
        android:id="@+id/button0"
        android:layout_below="@+id/textView"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:background="@color/colorUdacity"
        android:onClick="openSpotify" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn1_label"
        android:id="@+id/button1"
        android:layout_below="@+id/button0"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:background="@color/colorUdacity"
        android:onClick="openScores" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn2_label"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:background="@color/colorUdacity"
        android:onClick="openLibApp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn3_label"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:background="@color/colorUdacity"
        android:onClick="openBuildIt" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn4_label"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:background="@color/colorUdacity"
        android:onClick="openXyzReader" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_btn5_label"
        android:id="@+id/button5"
        android:background="@color/colorAccent"
        android:layout_below="@+id/button4"
        android:layout_marginTop="@dimen/button_gap"
        android:layout_centerHorizontal="true"
        android:onClick="openCapStone" />

</RelativeLayout>
